--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Pueblos Mágicos</title>
     <meta name="description" content="A catalog of Pueblos Magicos" />
     <link rel="stylesheet" href="style.css" />
-    <script type="text/javascript" src="scripts.js"></script>
+    <script type="module" src="scripts.js"></script>
   </head>
 
   <body>
